--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+.container {
+  width: 960px;
+  margin: 0 auto;
+  }
+  
+h1 {
+  margin: 30px;
+}
+
 div.video-holder {
   position: relative;
   padding-bottom: 56.25%; /* 315 / 560 (base of aspect ratio of video)*/
